welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: not found: value -
    case (getMondeLargeur() - 1, getMondeHauteur() - 1) => return true
                            ^ColumnByColumn:2: error: not found: value getMondeLargeur
    case (getMondeLargeur() - 1, getMondeHauteur() - 1) => return true
          ^ColumnByColumn:2: error: not found: value -
    case (getMondeLargeur() - 1, getMondeHauteur() - 1) => return true
                                                   ^ColumnByColumn:2: error: not found: value getMondeHauteur
    case (getMondeLargeur() - 1, getMondeHauteur() - 1) => return true
                                 ^ColumnByColumn:9: error: type mismatch;
 found   : Unit
 required: Int
	var newX:Int = ()
                       ^ColumnByColumn:14: error: not found: value esPosition
  while (!esPosition()) {
          ^ColumnByColumn:15: error: not enough arguments for method vaPositionSuivante: (oldX: Int, oldY: Int)Unit.
Unspecified value parameters oldX, oldY.
    vaPositionSuivante()
                      ^