welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
def estPositionFinale:Boolean = {
  (getX(), getY()) match {
    case (getMondeLargeur() - 1, getMondeHauteur() - 1) => return true
  }
  
  return false
}

def vaPositionSuivante(oldX: Int, oldY: Int) {
	var newX:Int = ()
  var newY:Int = (oldY + 1) % getMondeHauteur()
}

override def run() {
  while (!esPosition()) {
    vaPositionSuivante()
  }
}